# advent_of_code_2024

./: CMakeLists.txt
src/: CMakeLists.txt
src/day1/: day1.cpp  day1.hpp  input.hpp
src/day2/: day2.cpp  day2.hpp
test/: CMakeLists.txt  day1.cpp  day2.cpp  input_day2
